--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Login</h1>
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
+      <span id="error"></span>
       <button type="submit">Submit</button>
     </form>
     <!-- SCRIPTS -->
