Added register link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- PERSONAL STYLESHEETS -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <!-- TITLE -->
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
     <form onsubmit="event.preventDefault(); login()">
@@ -16,6 +16,7 @@
       <input type="password" id="password" placeholder="Password" required />
       <span id="error"></span>
       <button type="submit">Submit</button>
+      <p>Don't have an account? <a href="./register.html">Register here</a></p>
     </form>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
