--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
   <body>
     <form onsubmit="event.preventDefault(); register()">
       <h1>Register</h1>
-      <input type="text" id="full_name" required />
+      <input type="text" id="full_name" placeholder="Full Name" required />
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
       <span id="error"></span>
