--- a/landing.html
+++ b/landing.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- PERSONAL STYLESHEETS -->
-    <link rel="stylesheet" href="./styles/landing.css">
+    <link rel="stylesheet" href="./styles/landing.css" />
     <!-- TITLE -->
     <title>E-Commerce Store</title>
-</head>
-<body>
-    <h1>Welcome</h1>
+  </head>
+  <body>
+    <form onsubmit="">
+      <button type="submit">Submit</button>
+    </form>
     <!-- SCRIPTS -->
     <script src="./scripts/landing.js"></script>
-</body>
+  </body>
 </html>
