Products successfully attached to user and displays

--- a/landing.html
+++ b/landing.html
@@ -10,9 +10,8 @@
     <title>E-Commerce Store</title>
   </head>
   <body>
-    <form onsubmit="">
-      <button type="submit">Submit</button>
-    </form>
+    <h1 id="greeting"></h1>
+    <div id="products"></div>
     <!-- SCRIPTS -->
     <script src="./scripts/landing.js"></script>
   </body>
