--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/2822e841b6.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <!-- PERSONAL STYLESHEETS -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <!-- TITLE -->
     <title>Login</title>
   </head>
   <body>
-    <form onsubmit="event.preventDefault(); login()">
-      <h1>Login</h1>
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <span id="error"></span>
-      <button type="submit">Submit</button>
-      <p>Don't have an account? <a href="./register.html">Register here</a></p>
-    </form>
+    <!-- LOGIN CONTAINER -->
+    <div class="container">
+      <!-- LOGIN FORM -->
+      <form onsubmit="event.preventDefault(); login()">
+        <h1>Login</h1>
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <span id="error"></span>
+        <button type="submit">Submit</button>
+        <p>
+          Don't have an account? <a href="./register.html">Register here</a>
+        </p>
+      </form>
+    </div>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
   </body>
