Finished styling except for responsiveness

--- a/index.html
+++ b/index.html
@@ -24,17 +24,25 @@
   <body>
     <!-- LOGIN CONTAINER -->
     <div class="container">
-      <!-- LOGIN FORM -->
-      <form onsubmit="event.preventDefault(); login()">
-        <h1>Login</h1>
-        <input type="email" id="email" placeholder="Email" required />
-        <input type="password" id="password" placeholder="Password" required />
-        <span id="error"></span>
-        <button type="submit">Submit</button>
-        <p>
-          Don't have an account? <a href="./register.html">Register here</a>
-        </p>
-      </form>
+      <!-- LOGIN BACKGROUND -->
+      <div class="background">
+        <!-- LOGIN FORM -->
+        <form class="login-form" onsubmit="event.preventDefault(); login()">
+          <h1>Login</h1>
+          <input type="email" id="email" placeholder="Email" required />
+          <input
+            type="password"
+            id="password"
+            placeholder="Password"
+            required
+          />
+          <span id="error"></span>
+          <button type="submit">Submit</button>
+          <p>
+            Don't have an account? <a href="./register.html">Register here</a>
+          </p>
+        </form>
+      </div>
     </div>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
