--- a/register.html
+++ b/register.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/2822e841b6.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- PERSONAL STYLESHEETS -->
     <link rel="stylesheet" href="./styles/register.css" />
     <!-- TITLE -->
