Styling landing page and adding more functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
   </head>
   <body>
     <!-- MY SETUP -->
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar">
+      <h1>Furnitured</h1>
+      <div class="navigation">
+        <a href="#about">ABOUT</a>
+        <a href="#">CONTACT </a>
+      </div>
+      <div class="cart-profile">
+        <a href="#"><i class="fas fa-shopping-cart"></i></a>
+        <a href="#"><i class="far fa-user"></i></a>
+      </div>
+    </nav>
+    <!-- LANDING IMAGE -->
+    <div class="landing"></div>
+    <!-- ABOUT SECTION -->
+    <div id="about"></div>
     <!-- TEMPORARY SETUP -->
     <div class="options-bar">
       <button onclick="toggleCreateProductModal()">Create Product</button>
