Added files for cart & profile

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <h1>Furnitured</h1>
       <div class="navigation">
         <a href="#about">ABOUT</a>
-        <a href="#">CONTACT </a>
+        <a href="#contact">CONTACT </a>
       </div>
       <div class="cart-profile">
-        <a href="#"><i class="fas fa-shopping-cart"></i></a>
-        <a href="#"><i class="far fa-user"></i></a>
+        <a href="./cart.html"><i class="fas fa-shopping-cart"></i></a>
+        <a href="./profile.html"><i class="far fa-user"></i></a>
       </div>
     </nav>
     <!-- LANDING IMAGE -->
