--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <h1>Welcome to your profile</h1>
+    <button onclick="logout()">Logout</button>
     <!-- SCRIPTS -->
     <script src="./scripts/profile.js"></script>
   </body>
