Added pathway navigations

--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,13 @@
     <title>Cart</title>
   </head>
   <body>
+    <nav class="navbar">
+      <h1>Furtnitured</h1>
+      <div class="back-profile">
+        <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="./profile.html"><i class="far fa-user"></i></a>
+      </div>
+    </nav>
     <h1>Welcome to your cart</h1>
     <!-- SCRIPTS -->
     <script src="./scripts/cart.js"></script>
