--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,13 @@
     <title>Profile</title>
   </head>
   <body>
+    <nav class="navbar">
+      <h1>Furtnitured</h1>
+      <div class="cart-back">
+        <a href="./cart.html"><i class="fas fa-shopping-cart"></i></a>
+        <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+      </div>
+    </nav>
     <h1>Welcome to your profile</h1>
     <button onclick="logout()">Logout</button>
     <!-- SCRIPTS -->
