Updated landing page

--- a/cart.html
+++ b/cart.html
@@ -22,6 +22,7 @@
         <a href="./profile.html"><i class="far fa-user"></i></a>
       </div>
     </nav>
+    <div class="landing"></div>
     <h1>Welcome to your cart</h1>
     <!-- SCRIPTS -->
     <script src="./scripts/cart.js"></script>
