--- a/profile.html
+++ b/profile.html
@@ -22,6 +22,7 @@
         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
       </div>
     </nav>
+    <div class="landing"></div>
     <h1>Welcome to your profile</h1>
     <button onclick="logout()">Logout</button>
     <!-- SCRIPTS -->
