Added contact id

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+    <div id="contact"></div>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
   </body>
