Deleted profile files and preparing guest functions

--- a/cart.html
+++ b/cart.html
@@ -19,11 +19,12 @@
       <h1>Furtnitured</h1>
       <div class="back-profile">
         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-        <a href="./profile.html"><i class="far fa-user"></i></a>
+        <a onclick="logout()"><i class="fas fa-sign-out-alt"></i></a>
       </div>
     </nav>
     <div class="landing"></div>
     <h1>Welcome to your cart</h1>
+    <div class="container"></div>
     <!-- SCRIPTS -->
     <script src="./scripts/cart.js"></script>
   </body>
