--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="cart-profile">
         <a href="./cart.html"><i class="fas fa-shopping-cart"></i></a>
-        <a href="./profile.html"><i class="far fa-user"></i></a>
+        <a onclick="logout()"><i class="fas fa-sign-out-alt"></i></a>
       </div>
     </nav>
     <!-- LANDING IMAGE -->
