--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
     <title>Cart</title>
   </head>
   <body>
+    <!-- NAVIGATION BAR -->
     <nav class="navbar">
       <h1>Furtnitured</h1>
       <div class="back-profile">
@@ -22,7 +23,9 @@
         <a onclick="logout()"><i class="fas fa-sign-out-alt"></i></a>
       </div>
     </nav>
+    <!-- LANDING PAGE -->
     <div class="landing"></div>
+    <!-- CART -->
     <h1>Welcome to your cart</h1>
     <div class="container"></div>
     <!-- SCRIPTS -->
