--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     <!-- ABOUT SECTION -->
     <div id="about"></div>
     <!-- TEMPORARY SETUP -->
+    <!-- WILL MAKE THIS TOGGLE AVAILABLE ONLY FOR ADMIN -->
     <div class="options-bar">
       <button onclick="toggleCreateProductModal()">Create Product</button>
     </div>
+    <!-- CONSIDERING WHETHER TO KEEP THE GREETING -->
     <h1 id="greeting"></h1>
+    <!-- PRODUCTS DISPLAY -->
     <div id="products"></div>
+    <!-- MODAL -->
     <div id="create-product-modal">
       <form onsubmit="event.preventDefault(); createProduct()">
         <input type="file" placeholder="Image" id="image" required />
