--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h1>Furnitured</h1>
       <div class="navigation">
         <a href="#about">ABOUT</a>
+        <a href="#about-products">PRODUCTS</a>
         <a href="#contact">CONTACT </a>
       </div>
       <div class="cart-profile">
@@ -32,6 +33,16 @@
     <div class="landing"></div>
     <!-- ABOUT SECTION -->
     <div id="about"></div>
+    <!-- ABOUT PRODUCTS -->
+    <div id="about-products">
+      <h1>ABOUT US</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
+        atque libero soluta velit possimus omnis explicabo optio ad amet
+        quibusdam corporis fuga, magni numquam alias molestiae fugiat nihil
+        rerum?
+      </p>
+    </div>
     <!-- TEMPORARY SETUP -->
     <!-- WILL MAKE THIS TOGGLE AVAILABLE ONLY FOR ADMIN -->
     <div class="options-bar">
