Styling the about section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Furnitured</h1>
       <div class="navigation">
         <a href="#about">ABOUT</a>
-        <a href="#about-products">PRODUCTS</a>
+        <a href="#about-us">PRODUCTS</a>
         <a href="#contact">CONTACT </a>
       </div>
       <div class="cart-profile">
@@ -34,7 +34,7 @@
     <!-- ABOUT SECTION -->
     <div id="about"></div>
     <!-- ABOUT PRODUCTS -->
-    <div id="about-products">
+    <div id="about-us">
       <h1>ABOUT US</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
@@ -42,6 +42,22 @@
         quibusdam corporis fuga, magni numquam alias molestiae fugiat nihil
         rerum?
       </p>
+    </div>
+    <div class="about-products">
+      <div class="best-seller">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
+          atque libero
+        </p>
+        <img src="./images/bestseller.jpg" alt="Best Seller" />
+      </div>
+      <div class="set">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
+          atque libero
+        </p>
+        <img src="./images/set.jpg" alt="Our Set" />
+      </div>
     </div>
     <!-- TEMPORARY SETUP -->
     <!-- WILL MAKE THIS TOGGLE AVAILABLE ONLY FOR ADMIN -->
