--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Furnitured</h1>
       <div class="navigation">
         <a href="#about">ABOUT</a>
-        <a href="#about-us">PRODUCTS</a>
+        <a href="#about-products">PRODUCTS</a>
         <a href="#contact">CONTACT </a>
       </div>
       <div class="cart-profile">
@@ -34,7 +34,7 @@
     <!-- ABOUT SECTION -->
     <div id="about"></div>
     <!-- ABOUT PRODUCTS -->
-    <div id="about-us">
+    <div class="about-us">
       <h1>ABOUT US</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
@@ -43,20 +43,26 @@
         rerum?
       </p>
     </div>
-    <div class="about-products">
+    <div id="about-products">
       <div class="best-seller">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
-          atque libero
-        </p>
+        <div class="about-products-description">
+          <h2>OUR BEST SELLER</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
+            atque libero
+          </p>
+        </div>
         <img src="./images/bestseller.jpg" alt="Best Seller" />
       </div>
       <div class="set">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
-          atque libero
-        </p>
         <img src="./images/set.jpg" alt="Our Set" />
+        <div class="about-products-description">
+          <h2>SETS</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quos
+            atque libero
+          </p>
+        </div>
       </div>
     </div>
     <!-- TEMPORARY SETUP -->
