Finished styling the about section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="landing"></div>
     <!-- ABOUT SECTION -->
     <div id="about"></div>
-    <!-- ABOUT PRODUCTS -->
+    <!-- ABOUT US -->
     <div class="about-us">
       <h1>ABOUT US</h1>
       <p>
@@ -43,7 +43,9 @@
         rerum?
       </p>
     </div>
+    <!-- ABOUT PRODUCTS -->
     <div id="about-products">
+      <!-- BEST SELLER -->
       <div class="best-seller">
         <div class="about-products-description">
           <h2>OUR BEST SELLER</h2>
@@ -54,6 +56,7 @@
         </div>
         <img src="./images/bestseller.jpg" alt="Best Seller" />
       </div>
+      <!-- SET -->
       <div class="set">
         <img src="./images/set.jpg" alt="Our Set" />
         <div class="about-products-description">
