Preparing to style the products

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         <button type="submit">Submit</button>
       </form>
     </div>
-    <div id="contact"></div>
+    <!-- CONTACT PAGE -->
+    <div id="contact">
+      <form action="https://formspree.io/f/mvodddaa" method="POST"></form>
+    </div>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
   </body>
