Added footer and an image for the landing of contact page

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         <button type="submit" id="contact-button">Submit</button>
       </form>
     </div>
+    <!-- FOOTER -->
+    <footer id="footer">
+      Copyright © 2017 All Rights Reserved by Furnitured.
+    </footer>
     <!-- SCRIPTS -->
     <script src="./scripts/main.js"></script>
   </body>
