Styled cart page

--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
     <!-- LANDING PAGE -->
     <div class="landing"></div>
     <!-- CART -->
-    <h1>Welcome to your cart</h1>
+    <h1 id="greeting">Welcome to your cart</h1>
     <div class="container"></div>
     <!-- SCRIPTS -->
     <script src="./scripts/cart.js"></script>
