--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- LANDING IMAGE -->
     <div class="landing"></div>
     <!-- ABOUT SECTION -->
-    <div id="about"></div>
+    <section id="about"></section>
     <!-- ABOUT US -->
     <div class="about-us">
       <h1>ABOUT US</h1>
